--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,6 +53,18 @@ jobs:
               id: slack
               uses: slackapi/slack-github-action@v1.25.0
               with:
-                payload-file-path: "./.github/slack/test-failure-slack-payload.json"
+                payload: |
+                  {
+                    "blocks": [
+                        {
+                            "type": "section",
+                            "text": {
+                                "type": "mrkdwn",
+                                "text": "🔴 *<https://github.com/{{github.repository}}/actions/runs${{ github.run_id }}|${{ github.workflow }} workflow run>* failed."
+                            }
+                        }
+                    ]
+                  }
               env:
                 SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+                SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
