--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -60,7 +60,7 @@ jobs:
                             "type": "section",
                             "text": {
                                 "type": "mrkdwn",
-                                "text": "🔴 *<https://github.com/{{github.repository}}/actions/runs${{ github.run_id }}|${{ github.workflow }} workflow run>* failed."
+                                "text": "🔴 *<https://github.com/${{ github.repository }}/actions/runs${{ github.run_id }}|${{ github.workflow }} workflow run>* failed."
                             }
                         }
                     ]
