--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Build Project
         run: npm run build
         env:
-          FLAGSMITH_KEY: ${{ secrets.FLAGSMITH_KEY }}
+          environmentKey: "staging"
       - uses: actions/upload-artifact@v4
         with:
           name: build
