--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,11 @@
 name: Test
-on: workflow_call
+on:
+    workflow_call
 
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,8 +24,6 @@ jobs:
         run: npm run typecheck
       - name: Build Project
         run: npm run build
-        env:
-          environmentKey: "staging"
       - uses: actions/upload-artifact@v4
         with:
           name: build
